# shmqueue

./: CMakeLists.txt
src/: client.cpp  main.cpp
